fixed offscreen menu

--- a/Websites/fermiumlabs_com/Assets/sass/hover/_hacks.scss
+++ b/Websites/fermiumlabs_com/Assets/sass/hover/_hacks.scss
@@ -20,7 +20,7 @@
 
 @mixin forceBlockLevel() {
 	// Transforms need to be block-level to work
-	display: inline-block;
+	display: /*inline-*/block;
 	vertical-align: middle;
 }
 
